--- a/wiltalcode-site/index.html
+++ b/wiltalcode-site/index.html
@@ -15,17 +15,25 @@
 <body class="bg-black text-white font-sans">
 
   <!-- Navbar Fixa -->
-  <header class="fixed top-0 left-0 right-0 z-50 bg-black border-b border-orange-500 shadow-lg">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-orange-500">WilTalCode</h1>
+ <header class="fixed top-0 left-0 right-0 z-50 bg-black border-b border-orange-500 shadow-lg">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
+    <!-- Logo -->
+    <a href="#home" class="flex items-center">
+      <img 
+        src="imagens/banner.png" 
+        alt="Logo WilTalCode" 
+        class="h-14 w-auto max-w-[160px] brightness-[1.8] contrast-[1.4] saturate-150 drop-shadow-md"
+      />
+    </a>
+      
       <nav class="space-x-6 text-sm">
-        <a href="#home" class="hover:text-orange-400">Home</a>
-        <a href="#servicos" class="hover:text-orange-400">Serviços</a>
-        <a href="#depoimentos" class="hover:text-orange-400">Depoimentos</a>
-        <a href="#acessos" class="hover:text-orange-400">Acessos</a>
-        <a href="#contato" class="hover:text-orange-400">Contato</a>
-      </nav>
-    </div>
+      <a href="#home" class="hover:text-orange-400">Home</a>
+      <a href="#servicos" class="hover:text-orange-400">Serviços</a>
+      <a href="#depoimentos" class="hover:text-orange-400">Depoimentos</a>
+      <a href="#acessos" class="hover:text-orange-400">Acessos</a>
+      <a href="#contato" class="hover:text-orange-400">Contato</a>
+    </nav>
+  </div>
   </header>
 
   <main class="pt-24">
